# WhatsApp_Chatbot

./: .gitignore  .local_llm_routing_guide.md  CLAUDE.md  Dockerfile  Dockerfile.upstox  Dockerfile.whatsapp  LEARNING_LOG.md  README.md  deploy.sh  docker-compose.yml  entrypoint.sh  main.py  pAIsa_video.html  prompts.json  pyproject.toml  render.yaml  tavily.ipynb  upstox_analysis.py  upstox_clean.ipynb
.claude/commands/: commit.md  create-spec.md
.claude/plans/: 01-database-setup.md  02-registration-plan.md
.claude/specs/: 01-database-setup.md  02-registration.md
assets/: paisa_video.webm
templates/: frontend_upstox.html  login.html  signup.html
trading_pAIsa/: README.md  main.py
trading_pAIsa/database/: db.py  market_db.sqlite3  market_repo.py
