[project]
name = "whatsapp-trading-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.4.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "kiteconnect>=5.0.1",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-tavily>=0.2.17",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.3",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pip>=26.0",
    "plotly>=6.6.0",
    "protobuf>=6.33.4",
    "psycopg[binary]>=3.3.2",
    "pycryptodome>=3.23.0",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.22",
    "pywa>=3.6.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "upstox-python-sdk>=2.19.0",
    "uvicorn>=0.40.0",
]
